# alphaquest-research-engine

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  AlphaQuest Studio.command  CONTRIBUTING.md  Makefile  README.md  START_HERE.md  TEST_COMMANDS.md  alphaquest-research.code-workspace  manual_due_diligence_checklist.md  methodology_audit.md  pyproject.toml  research_campaign_ledger.md  research_ledger.csv
.github/: CODEOWNERS  pull_request_template.md
_archived/: research_campaign_ledger.md
apps/: README.md  research_studio.py  validation_dashboard.py
campaigns/: README.md
catalogs/: README.md
config/: README.md  research_settings.yaml  storage_layout.yaml
constraints/: dev.txt
data/: README.md
docs/: README.md
execution_system/: .gitignore  IB_GATEWAY_SETUP.md  README.md  RUN_COMMANDS.md  apex_50k_eod_guardrails.example.json  apex_eod_guardrails.py  databento_signal_engine.py  dummy_delta_signal_engine.example.yaml  ibkr_decimal_volume_patch.py  ibkr_es_historical_1m_fetch.py  ibkr_es_l2_ohlcv_poc.py  ironbeam_es_l2_ohlcv_poc.py  morning_orderflow_momentum_signal_engine.example.yaml  proteryx_es_market_bracket.py  signal_engine.example.yaml  strategy_execution_bridge.example.json  strategy_execution_bridge.py  tradovate_client.py  tradovate_es_market_bracket.py
research/: __init__.py  preflight.py
research_artifacts/: README.md  acceptance_oos_shortlist_passes_20260615.csv  acceptance_oos_shortlist_passes_20260615.json  active_aggregate_backfill_20260617.md  all_failed_variant_rescue_audit_20260615.md  archive_revamp_retest_summary_20260621.csv  archive_revamp_retest_summary_20260621.md  backtest_campaign_stage_benchmarks_20260621.md  backtest_campaign_stage_benchmarks_20260621_after_current_default_rerun.md  backtest_campaign_stage_benchmarks_20260621_after_current_default_rerun_aggregate.csv  backtest_campaign_stage_benchmarks_20260621_after_incomplete_rerun_detail.csv  backtest_campaign_stage_benchmarks_20260621_after_invalid_cleanup_benchmark_definitions.json  benchmark_table_reruns_20260617.md  (+491 more)
schemas/: README.md  (+14 more)
(+37009 files in other folders)
