[project]
name = "prop-stack-automation"
version = "0.1.0"
description = "Milestone 7 research skeleton for futures prop-firm backtesting."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "pyarrow>=13.0",
  "databento>=0.78",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
dashboard = ["streamlit>=1.30", "plotly>=5.18"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
